fix swagger get and delete.
